chore: bump spring boot to 3.1.4 and remove docker related tasks