@@ -25,3 +25,7 @@ dependencies {
     implementation("com.github.ben-manes.caffeine:guava:3.1.5")
     implementation("com.github.ben-manes.caffeine:jcache:3.1.5")
 }
+
+test {
+    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
+}
